# regression-bias-corrector

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release_pypi.yml
notebooks/: example.ipynb  linear_corrector.yml
src/regression_bias_correction/: __init__.py  linear_corrector.py
src/regression_bias_corrector/: __init__.py  _version.py  linear_corrector.py
