[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "src/regression_bias_corrector/_version.py"

[project]
name = "regression-bias-corrector"
dynamic = ["version"]
authors = [
  { name="Mikhail Krivonosov", email="krivonosov@itmm.unn.ru" },
]
description = "Bias correction of regression ML models"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.15.0",
    "scikit-learn",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/mike-live/regression-bias-corrector"
"Bug Tracker" = "https://github.com/mike-live/regression-bias-corrector/issues"